// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FullModal renders default 1`] = `
.c3 {
  position: fixed;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  -webkit-tap-highlight-color: transparent;
}

.c0 {
  position: fixed;
  z-index: 1300;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c6 {
  background-color: #121212;
  color: #e9ebf0;
  -webkit-transition: box-shadow 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: box-shadow 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  border-radius: 4px;
  box-shadow: 0px 11px 15px -7px rgba(0,0,0,0.2),0px 24px 38px 3px rgba(0,0,0,0.14),0px 9px 46px 8px rgba(0,0,0,0.12);
  background-image: linear-gradient(rgba(255,255,255,0.16),rgba(255,255,255,0.16));
}

.c4 {
  z-index: -1;
}

.c5 {
  height: 100%;
  outline: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 {
  margin: 0;
  position: relative;
  overflow-y: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-height: none;
  max-width: 100%;
  width: 100%;
  height: 100%;
  border-radius: 0;
}

.c7.MuiDialog-paperScrollBody {
  margin: 0;
  max-width: 100%;
}

.c2 {
  margin: 0;
  width: 100vw;
  overflow: hidden;
  --modal-height: calc(100vh - 56px);
  height: var(--modal-height);
  background-color: transparent;
  top: 56px !important;
}

.c2 .MuiDialog-container {
  background-color: #0f131a;
}

.c2 .MuiPaper-root {
  background-image: unset;
  background-color: unset;
}

@media print {
  .c1 {
    position: absolute !important;
  }
}

@media print {
  .c5 {
    height: auto;
  }
}

@media print {
  .c7 {
    overflow-y: visible;
    box-shadow: none;
  }
}

<body
  style="padding-right: 1024px; overflow: hidden;"
>
  <div
    aria-hidden="true"
  />
  <div
    class="c0 MuiModal-root c1 MuiDialog-root c2"
    role="presentation"
  >
    <div
      aria-hidden="true"
      class="c3 MuiBackdrop-root c4"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="c5 MuiDialog-container MuiDialog-scrollPaper"
      role="presentation"
      style="opacity: 1; webkit-transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        aria-labelledby="full-modal"
        class="c6 MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation24 c7 MuiDialog-paper MuiDialog-paperScrollPaper MuiDialog-paperWidthSm MuiDialog-paperFullScreen"
        role="dialog"
      />
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`FullModal renders default with contrast 1`] = `
.c3 {
  position: fixed;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  -webkit-tap-highlight-color: transparent;
}

.c0 {
  position: fixed;
  z-index: 1300;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c6 {
  background-color: #121212;
  color: #e9ebf0;
  -webkit-transition: box-shadow 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: box-shadow 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  border-radius: 4px;
  box-shadow: 0px 11px 15px -7px rgba(0,0,0,0.2),0px 24px 38px 3px rgba(0,0,0,0.14),0px 9px 46px 8px rgba(0,0,0,0.12);
  background-image: linear-gradient(rgba(255,255,255,0.16),rgba(255,255,255,0.16));
}

.c4 {
  z-index: -1;
}

.c5 {
  height: 100%;
  outline: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 {
  margin: 0;
  position: relative;
  overflow-y: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-height: none;
  max-width: 100%;
  width: 100%;
  height: 100%;
  border-radius: 0;
}

.c7.MuiDialog-paperScrollBody {
  margin: 0;
  max-width: 100%;
}

.c2 {
  margin: 0;
  width: 100vw;
  overflow: hidden;
  --modal-height: calc(100vh - 56px);
  height: var(--modal-height);
  background-color: transparent;
  top: 56px !important;
}

.c2 .MuiDialog-container {
  background-color: #0f131a;
}

.c2 .MuiPaper-root {
  background-image: unset;
  background-color: #0f131a;
}

@media print {
  .c1 {
    position: absolute !important;
  }
}

@media print {
  .c5 {
    height: auto;
  }
}

@media print {
  .c7 {
    overflow-y: visible;
    box-shadow: none;
  }
}

<body
  style="padding-right: 1024px; overflow: hidden;"
>
  <div
    aria-hidden="true"
  />
  <div
    class="c0 MuiModal-root c1 MuiDialog-root c2"
    role="presentation"
  >
    <div
      aria-hidden="true"
      class="c3 MuiBackdrop-root c4"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="c5 MuiDialog-container MuiDialog-scrollPaper"
      role="presentation"
      style="opacity: 1; webkit-transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        aria-labelledby="full-modal"
        class="c6 MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation24 c7 MuiDialog-paper MuiDialog-paperScrollPaper MuiDialog-paperWidthSm MuiDialog-paperFullScreen"
        role="dialog"
      />
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`FullModal renders when another view is active 1`] = `
@media print {

}

<body
  style=""
>
  <div />
</body>
`;

exports[`FullModal renders when not showing 1`] = `
.c3 {
  position: fixed;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  -webkit-tap-highlight-color: transparent;
}

.c0 {
  position: fixed;
  z-index: 1300;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c6 {
  background-color: #121212;
  color: #e9ebf0;
  -webkit-transition: box-shadow 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: box-shadow 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  border-radius: 4px;
  box-shadow: 0px 11px 15px -7px rgba(0,0,0,0.2),0px 24px 38px 3px rgba(0,0,0,0.14),0px 9px 46px 8px rgba(0,0,0,0.12);
  background-image: linear-gradient(rgba(255,255,255,0.16),rgba(255,255,255,0.16));
}

.c4 {
  z-index: -1;
}

.c5 {
  height: 100%;
  outline: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 {
  margin: 0;
  position: relative;
  overflow-y: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-height: none;
  max-width: 100%;
  width: 100%;
  height: 100%;
  border-radius: 0;
}

.c7.MuiDialog-paperScrollBody {
  margin: 0;
  max-width: 100%;
}

.c2 {
  margin: 0;
  width: 100vw;
  overflow: hidden;
  --modal-height: calc(100vh - 56px);
  height: var(--modal-height);
  background-color: transparent;
  top: 56px !important;
}

.c2 .MuiDialog-container {
  background-color: #0f131a;
}

.c2 .MuiPaper-root {
  background-image: unset;
  background-color: unset;
}

@media print {
  .c1 {
    position: absolute !important;
  }
}

@media print {
  .c5 {
    height: auto;
  }
}

@media print {
  .c7 {
    overflow-y: visible;
    box-shadow: none;
  }
}

<body
  style="padding-right: 1024px; overflow: hidden;"
>
  <div
    aria-hidden="true"
  />
  <div
    class="c0 MuiModal-root c1 MuiDialog-root c2"
    role="presentation"
  >
    <div
      aria-hidden="true"
      class="c3 MuiBackdrop-root c4"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="c5 MuiDialog-container MuiDialog-scrollPaper"
      role="presentation"
      style="opacity: 1; webkit-transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        aria-labelledby="full-modal"
        class="c6 MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation24 c7 MuiDialog-paper MuiDialog-paperScrollPaper MuiDialog-paperWidthSm MuiDialog-paperFullScreen"
        role="dialog"
      />
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;
